# Music-Player

./: .gitignore  CMakeLists.txt  README.md
Documentation/: ModernMusicPlayer_Handbook_Book.html  index.html
Documentation/documentation_md/: 01_introduction.md  02_build_system.md  03_cpp_foundations.md  04_data_layer.md  05_library_scanner.md  06_audio_engine.md  07_equalizer.md  08_cover_art.md  09_main_bridge.md  10_qml_fundamentals.md  11_qml_main_window.md  12_qml_library_view.md  13_qml_equalizer_view.md  14_dataflow.md  15_building_and_packaging.md  ModernMusicPlayer_Handbook_Book.md  ModernMusicPlayer_Handbook_Book_Formatted.md  README.md
include/: track_model.h
qml/: LibraryView.qml  NowPlayingView.qml  main.qml
src/: main.cpp  track_model.cpp
